--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-
+upload_port = /dev/ttyUSB1
+monitor_port = /dev/ttyUSB1
+monitor_speed = 115200
