--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 upload_port = /dev/ttyACM0
 monitor_port = /dev/ttyACM0
 monitor_speed = 115200
+lib_deps = 
+	FastLED@^3.3.2
+
