--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 // AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
-
+//
 // PIO Unified Debugger
 //
 // Documentation: https://docs.platformio.org/page/plus/debugging.html
@@ -49,7 +49,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/main",
-            "args": ["-v"],
+            "args": [
+                "-v"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -68,23 +70,33 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/sander/projects/boards/arduino-board-led-driver/.pio/build/due/firmware.elf",
-            "toolchainBinDir": "/home/sander/.platformio/packages/toolchain-gccarmnoneeabi/bin",
-            "svdPath": "/home/sander/.platformio/platforms/atmelsam/misc/svd/ATSAM3X8E.svd",
+            "executable": "f:/dev/projects/arduino-board-led-driver/.pio/build/esp/firmware.elf",
+            "projectEnvName": "esp",
+            "toolchainBinDir": "C:/Users/sander/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
-            },
-            "internalConsoleOptions": "openOnSessionStart"
+            }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/sander/projects/boards/arduino-board-led-driver/.pio/build/due/firmware.elf",
-            "toolchainBinDir": "/home/sander/.platformio/packages/toolchain-gccarmnoneeabi/bin",
-            "svdPath": "/home/sander/.platformio/platforms/atmelsam/misc/svd/ATSAM3X8E.svd",
+            "executable": "f:/dev/projects/arduino-board-led-driver/.pio/build/esp/firmware.elf",
+            "projectEnvName": "esp",
+            "toolchainBinDir": "C:/Users/sander/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug (without uploading)",
+            "executable": "f:/dev/projects/arduino-board-led-driver/.pio/build/esp/firmware.elf",
+            "projectEnvName": "esp",
+            "toolchainBinDir": "C:/Users/sander/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "loadMode": "manual"
         }
     ]
 }
