--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -8,14 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:due]
-platform = atmelsam
-board = due
+[env:esp]
+platform = espressif8266
+board = nodemcuv2
 framework = arduino
-upload_port = /dev/ttyACM1
-monitor_port = /dev/ttyACM1
+upload_port = COM3
+monitor_port = COM3
 monitor_speed = 115200
 lib_deps = 
 	FastLED@^3.3.2
+	https://github.com/SanderRonde/pio-libraries.git
+	bblanchon/ArduinoJson@^6.19.4
 debug_tool = stlink
-debug_init_break = 
+debug_init_break =
